# Semaforo_com_FreeRTOS

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
